fix: hide scrollbar to prevent content displacing

--- a/frontend/static/css/app.css
+++ b/frontend/static/css/app.css
@@ -50,3 +50,7 @@ a:visited {
   text-decoration: none;
   color: inherit;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
